# embed-test

./: .dockerignore  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  debug_gui.py  fix_weaviate_tests.py  launch_gui.py  mkdocs.yml  mypy.ini  pyproject-core.toml  pyproject-gui.toml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/tdd-guard/data/: test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml
docs/: changelog.md  index.md
docs/api/: config.md  embeddings.md  environment-variables.md  pdf.md  pipeline.md  utils.md  vector-db.md
docs/development/: contributing.md  releases.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/user-guide/: api.md  cli.md  cookbook.md  examples.md  faq.md  gui.md
examples/: CONTRIBUTING.md  IMPROVEMENT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TEST_VALIDATION_REPORT.md  __init__.py  code_quality_review.py  embedding_features_demo.py  enhanced_embedding_demo.py  test_all_examples.py  test_functions.py
examples/01_basic_usage/: README.md  configuration_basics.py  first_search.py  health_check.py  simple_pdf_processing.py
examples/02_embedding_providers/: README.md  openai_examples.py  provider_comparison.py  sentence_transformers_examples.py  unified_interface_demo.py
examples/03_cli_usage/: README.md  basic_cli_operations.py
examples/04_gui_applications/: README.md
examples/05_vector_database/: README.md
examples/06_text_processing/: README.md
examples/07_configuration/: README.md  advanced_configuration.py  configuration_patterns.py  environment_configs.py
examples/08_integration/: README.md  pipeline_operations.py  workflow_automation.py
examples/09_performance/: README.md
examples/10_production/: README.md
examples/sample_data/: .env.example  README.md
examples/sample_data/config_templates/: development.env  production.env  testing.env
examples/utils/: README.md  example_helpers.py  sample_data_generator.py
pdf_vector_system/: __init__.py  _version.py  cli.py  gui_main.py  pipeline.py
pdf_vector_system/cli/: __init__.py  main.py
pdf_vector_system/config/: __init__.py  settings.py
pdf_vector_system/core/: __init__.py  pipeline.py
pdf_vector_system/core/config/: __init__.py  settings.py
pdf_vector_system/core/embeddings/: __init__.py  azure_openai_service.py  base.py  caching.py  chunking.py  cohere_service.py  factory.py  gemini_service.py  google_use_service.py  health_check.py  huggingface_service.py  openai_service.py  preprocessing.py  provider_configs.py  quality.py  retry.py  sentence_transformers_service.py  tokenization.py
pdf_vector_system/core/pdf/: __init__.py  processor.py  text_processor.py
pdf_vector_system/core/utils/: __init__.py  logging.py
pdf_vector_system/core/vector_db/: __init__.py  chroma_client.py  compatibility.py  converters.py  error_handler.py  factory.py  health_check.py  interface.py  milvus_client.py  models.py  pinecone_client.py  qdrant_client.py  weaviate_client.py
pdf_vector_system/embeddings/: __init__.py  azure_openai_service.py  base.py  caching.py  chunking.py  cohere_service.py  factory.py  gemini_service.py  google_use_service.py  health_check.py  huggingface_service.py  openai_service.py  preprocessing.py  provider_configs.py  quality.py  retry.py  sentence_transformers_service.py  tokenization.py
pdf_vector_system/gui/: __init__.py  app.py  main_window.py
pdf_vector_system/gui/controllers/: __init__.py  config_controller.py  document_controller.py  main_controller.py  processing_controller.py  search_controller.py  status_controller.py
pdf_vector_system/gui/utils/: icons.py  (+6 more)
pdf_vector_system/pdf/: __init__.py  processor.py  text_processor.py
pdf_vector_system/utils/: __init__.py  logging.py  progress.py
pdf_vector_system/vector_db/: __init__.py  chroma_client.py  compatibility.py  config.py  converters.py  error_handler.py  factory.py  health_check.py  interface.py  milvus_client.py  models.py  pinecone_client.py  qdrant_client.py  weaviate_client.py
scripts/: build.sh  install.bat  install.sh
tests/: __init__.py  conftest.py  test_cli.py  test_gui_main.py  test_integration.py  test_pipeline.py  test_version.py
tests/cli/: conftest.py  test_collections_command.py  test_config_command.py  test_delete_command.py  test_health_command.py  test_list_docs_command.py  test_main.py  test_process_command.py  test_search_command.py  test_stats_command.py  test_utilities.py
tests/config/: conftest.py  test_settings.py
tests/core/: test_pipeline.py
tests/embeddings/: conftest.py  test_base.py  test_factory.py  test_gemini_service.py  test_openai_service.py  test_optional_providers.py  test_provider_configs.py  test_quality.py  test_retry_and_health.py  test_sentence_transformers_service.py  test_tokenization.py
tests/gui/: README.md  __init__.py  conftest.py  test_app.py  test_main_window.py  test_runner.py
tests/mocks/: __init__.py  chromadb_mocks.py  embedding_mocks.py  file_mocks.py  pdf_mocks.py
tests/pdf/: conftest.py  test_processor.py  test_text_processor.py
tests/utils/: __init__.py  conftest.py  fixtures.py  test_data.py  test_logging.py  test_progress.py
tests/vector_db/: conftest.py  test_backend_parity.py  test_chroma_client.py  test_compatibility.py  test_comprehensive_error_handling.py  test_config.py  test_converters.py  test_edge_cases.py  test_error_handler.py  test_factory.py  test_health_check.py  test_integration.py  test_interface.py  test_interface_compliance.py  test_milvus_client.py  test_models.py  test_pinecone_client.py  test_qdrant_client.py  test_weaviate_client.py
vectorflow/: __init__.py  _version.py  gui_main.py
vectorflow/cli/: __init__.py  main.py
vectorflow/core/: __init__.py  pipeline.py
vectorflow/gui/: __init__.py  app.py  main_window.py
(+153 files in other folders)
